between auto saving places.  For example, to save places every 5
minutes:

  M-x customize-option RET save-place-autosave-interval RET and set to
  300 seconds.

Or in elisp:

  (setopt save-place-autosave-interval (* 60 5))

If 'save-place-autosave-interval' is nil, auto saving is disabled; this
is the default.  As before, saved places are scheduled to be saved at
Emacs exit.

** Gnus

---
*** Replying to icalendar events now supports specifying a comment.
When called with a prefix argument, accepting, declining, or tentatively
accepting an icalendar event will prompt for a comment to add to the
response.

** Button

+++
*** New function 'unbuttonize-region'.
It removes all the buttons in the specified region.

+++
*** Disabling 'button-mode' now removes all buttons in the current buffer.

** Shell

*** New command to complete the shell history.
'comint-complete-input-ring' ('C-x <up>') is like 'minibuffer-complete-history'
but completes on comint inputs.

** Eshell

---
*** New interactive command 'eshell-clear'.
This command scrolls the screen so that only the current prompt is
visible, optionally erasing all the previous input/output as well.
Previously, the Eshell built-in command 'eshell/clear' supported this
(e.g., to call it via 'M-x'), but this new command behaves more
consistently if you have a partially-typed command at the Eshell prompt.

---
*** New user option 'eshell-command-async-buffer'.
This option lets you tell 'eshell-command' how to respond if its output
buffer is already in use by another invocation of 'eshell-command', much
like 'async-shell-command-buffer' does for 'shell-command'.  By default,
this will prompt for confirmation before creating a new buffer when
necessary.  To restore the previous behavior, set this option to
'confirm-kill-process'.

+++
*** 'eshell-execute-file' is now an interactive command.
Interactively, this now prompts for a script file to execute.  With the